<resources>
    <string name="app_name">ShowProfileActivity</string>
    <string name="name">Full Name</string>
    <string name="full_name">Full Name</string>
    <string name="nickname">Nickname</string>
    <string name="age">Age</string>
    <string name="sport">Sport</string>
    <string name="num_players">N.Players</string>
    <string name="location">Location</string>
    <string name="skill_lvl">Skill Level</string>
    <string name="gender">Gender</string>
    <string name="equipment">Equipment</string>
    <string name="info_disabled">Info.Disabled</string>
    <string name="pencil">pencil</string>
    <string name="pencil2">pencil2</string>
    <string name="information">Add Info Here</string>
    <string name="information2">Add Info Here</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="portrait">portrait</string>
    <string name="editProfileActivity">EditProfileActivity</string>
    <string name="save">Save</string>
    <string name="sportChoice">Choose a sport :</string>
    <string name="football_opt">Football</string>
    <string name="basketball_opt">Basketball</string>
</resources>